[workspace]
members = ["./peg-syntax-ext", "./peg-tests"]

[package]
name = "wee-peg"
version = "0.5.4"
authors = [ "Kevin Mehall <km@kevinmehall.net>", "Jamie Blondin <jblondin@gmail.com>" ]
license = "MIT"
repository = "https://github.com/jblondin/rust-peg"
documentation = "https://github.com/jblondin/rust-peg/blob/master/README.md#readme"
description = "A simple Parsing Expression Grammar (PEG) parser generator."
keywords = ["peg", "parser", "parsing", "grammar"]
categories = ["parsing"]
readme = "README.md"

[dependencies]
quote = "0.3"
codemap = "0.1"
codemap-diagnostic = "0.1"

[[bin]]
name = "rust-peg"
path = "src/bin.rs"
test = false
bench = false

[features]
trace = []
